MaJ bug affichage Loader sur firefox avec ajout visibility:collapse/hidden

--- a/SCSS/main.css
+++ b/SCSS/main.css
@@ -100,18 +100,22 @@ footer i {
 }
 @keyframes hideLoader {
   0% {
+    visibility: visible;
     display: flex;
   }
   100% {
+    visibility: collapse;
     display: none;
   }
 }
 @keyframes showContent {
   0% {
+    visibility: collapse;
     display: none;
     opacity: 0;
   }
   100% {
+    visibility: visible;
     display: flex;
     opacity: 1;
   }
